hard-gists/3b9d893f1e0788f8fad0e6b49cde70f1/run.log
=== Docker Run Log for 3b9d893f1e0788f8fad0e6b49cde70f1 ===
Started at: Mi 29. Okt 14:11:30 CET 2025

[2025-10-29 14:11:30] START: Running container for 3b9d893f1e0788f8fad0e6b49cde70f1
[2025-10-29 14:11:30] SUCCESS: Container 2da7170c0998e4c072c846c70726b3f377782368def9af0acaadc3463ab0f570 started for 3b9d893f1e0788f8fad0e6b49cde70f1
=== Container logs for 3b9d893f1e0788f8fad0e6b49cde70f1 ===
  File "/snippet.py", line 44
    print "Successfully loaded:", checkpoint.model_checkpoint_path
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3b9d893f1e0788f8fad0e6b49cde70f1 ===
[2025-10-29 14:11:32] INFO: Container 2da7170c0998e4c072c846c70726b3f377782368def9af0acaadc3463ab0f570 has stopped
